--- a/camera_ready/intro.tex
+++ b/camera_ready/intro.tex
@@ -1,7 +1,7 @@
 % !TEX root = main.tex
 
 \section{Introduction}
-
+\label{sec:intro}
 We consider the \emph{decentralized} feedback controller synthesis problem for \emph{multi-agent}, nonlinear systems against temporal \emph{reach-avoid} specifications.
 %
 By multi-agent, we mean that the systems under study are composed of a number of concurrently executing components.
