--- a/camera_ready/preamble.tex
+++ b/camera_ready/preamble.tex
@@ -34,7 +34,7 @@
 \newcommand{\todo}[1]{{\color{orange} \textbf{TODO:} #1}}
 
 % macros
-\newcommand{\tool}{\textsf{GMARA}\xspace}
+\newcommand{\tool}{\textsf{GAMARA}\xspace}
 \newcommand{\Sol}{\mathit{Sol}}
 \newcommand{\Xh}{\widehat{X}}
 \newcommand{\xh}{\widehat{x}}
