--- a/camera_ready/theory.tex
+++ b/camera_ready/theory.tex
@@ -283,7 +283,7 @@ We demonstrate this phenomenon on a control system $\Sigma$ that is a simple $2$
 where $x_1$ represents the angle (in Radian) of the pendulum rod measured counter-clockwise from the vertical upright position, and $x_2$ represents the rate of change of $x_1$ or the angular velocity.
 \begin{wrapfigure}{r}{0.2\textwidth}
 		\includegraphics[width=0.2\textwidth]{figures/inv_final.eps}
-		\caption{The nominal trajectory (the blue spiral) for the inverted pendulum, the initial state is the red point, and the final state is the green point. \KM{Mehrdad: can you increase the fontsize so that they can be read even when we make the figure small?}} %\Sadegh{Text inside the figure is very small, make it larger so that it is readable.}}
+		\caption{The nominal trajectory (the blue spiral) for the inverted pendulum, the initial state is the red point, and the final state is the green point.} %\Sadegh{Text inside the figure is very small, make it larger so that it is readable.}}
 		\label{fig:traj 2d pendulum}
 	\end{wrapfigure}
 Suppose the initial state of the pendulum is $(\pi,0)$, i.e., when the pendulum is in the vertical downward position and is stationary.
