--- a/camera_ready/references.bib
+++ b/camera_ready/references.bib
@@ -13,7 +13,6 @@
   title={Pattern-based refinement of assume-guarantee specifications in reactive synthesis},
   author={Alur, Rajeev and Moarref, Salar and Topcu, Ufuk},
   booktitle={TACAS},
-  pages={501--516},
   year={2015},
   organization={Springer}
 }
@@ -48,11 +47,8 @@
 
 @article{kousik2020bridging,
   title={Bridging the gap between safety and real-time performance in receding-horizon trajectory design for mobile robots},
-  author={Kousik, Shreyas and Vaskov, Sean and Bu, Fan and Johnson-Roberson, Matthew and Vasudevan, Ram},
-  journal={The International Journal of Robotics Research},
-  volume={39},
-  number={12},
-  pages={1419--1469},
+  author={Kousik, Sh. and Vaskov, S. and Bu, Fan and Johnson-Roberson, M. and Vasudevan, R.},
+  journal={Int. J. Robot. Res.},
   year={2020},
   publisher={SAGE Publications Sage UK: London, England}
 }
@@ -123,14 +119,9 @@
 
 @article{Ghosh2020,
 	year = {2020},
-	month = nov,
-	publisher = {Association for Computing Machinery ({ACM})},
-	volume = {4},
-	number = {{OOPSLA}},
-	pages = {1--30},
-	author = {Ritwika Ghosh and Chiao Hsieh and Sasa Misailovic and Sayan Mitra},
+	author = {R. Ghosh and Ch. Hsieh and S. Misailovic and S. Mitra},
 	title = {Koord: a language for programming and verifying distributed robotics application},
-	journal = {Proceedings of the {ACM} on Programming Languages}
+	journal = {OOPSLA}
 }
 
 @inproceedings{herbert2017fastrack,
@@ -199,22 +190,18 @@
 
 @inproceedings{majumdarassume,
   title={Assume-Guarantee Distributed Synthesis},
-  author={Majumdar, Rupak and Mallik, Kaushik and Schmuck, Anne-Kathrin and Zufferey, Damien},
+  author={Majumdar, R. and Mallik, K. and Schmuck, A. K and Zufferey, D.},
   booktitle={EMSOFT},
   year={2020}
 }
 
-@article{DBLP:journals/corr/abs-1911-09773,
-	author    = {P.{-}J. Meyer and
-	H. Yin and
-	A.H. Brodtkorb and
-	M. Arcak and
-	A. J. S{\o}rensen},
-	title     = {Continuous and discrete abstractions for planning, applied to ship
-	docking},
-	journal   = {CoRR},
-	volume    = {abs/1911.09773},
-	year      = {2019}
+
+@misc{meyer2019,
+	title={Continuous and discrete abstractions for planning, applied to ship docking}, 
+	author={P.-J Meyer and H. Yin and A. H. Brodtkorb and M. Arcak and A. J. Sørensen},
+	year={2019},
+	eprint={1911.09773},
+	archivePrefix={arXiv}
 }
 
 @article{DBLP:journals/tac/MeyerD19,
@@ -236,12 +223,9 @@
 
 @INPROCEEDINGS{Nilsson:2018,
 	author={P. {Nilsson} and A. D. {Ames}},
-	booktitle={2018 IEEE Conference on Decision and Control (CDC)}, 
+	booktitle={CDC}, 
 	title={Barrier Functions: Bridging the Gap between Planning from Specifications and Safety-Critical Control}, 
-	year={2018},
-	volume={},
-	number={},
-	pages={765-772}}
+	year={2018}}
 
 @article{Gavran2017antlab,
 	year = {2017},
@@ -250,13 +234,13 @@
 	volume = {16},
 	number = {5s},
 	pages = {1--19},
-	author = {Ivan Gavran and Rupak Majumdar and Indranil Saha},
+	author = {I. Gavran and R. Majumdar and I. Saha},
 	title = {Antlab},
 	journal = {{ACM} TECS}
 }
 
 @misc{Majumdar2020,
-	author = {Majumdar,  Rupak and Yoshida,  Nobuko and Zufferey,  Damien},
+	author = {Majumdar,  R. and Yoshida,  N. and Zufferey,  D.},
 	language = {en},
 	title = {Multiparty Motion Coordination: From Choreographies to Robotics Programs (Artifact)},
 	publisher = {Zenodo},
@@ -278,12 +262,9 @@
 
 @INPROCEEDINGS{Pant2018multiquad,
 	author={Y. V. {Pant} and H. {Abbas} and R. A. {Quaye} and R. {Mangharam}},
-	booktitle={2018 ACM/IEEE 9th International Conference on Cyber-Physical Systems (ICCPS)}, 
+	booktitle={ICCPS}, 
 	title={Fly-by-Logic: Control of Multi-Drone Fleets with Temporal Logic Objectives}, 
-	year={2018},
-	volume={},
-	number={},
-	pages={186-197}}
+	year={2018}}
 
 
 
@@ -312,9 +293,7 @@
 	title={Learning-to-Fly: Learning-based Collision Avoidance for Scalable Urban Air Mobility},
 	author={A. Rodionova and Y. Pant and K. Jang and H. Abbas and Rahul Mangharam},
 	journal={ArXiv},
-	year={2020},
-	volume={abs/2006.13267}
-}
+	year={2020}}
 
 @book{russel2010AIplanning,
 	author    = {Stuart J. Russell and
@@ -338,10 +317,7 @@
 	author={Y. E. {Sahin} and P. {Nilsson} and N. {Ozay}},
 	booktitle={ICCPS}, 
 	title={Provably-Correct Coordination of Large Collections of Agents with Counting Temporal Logic Constraints}, 
-	year={2017},
-	volume={},
-	number={},
-	pages={249-258}}
+	year={2017}}
 
 @INPROCEEDINGS{8619113,
 	author={M. {Srinivasan} and S. {Coogan} and M. {Egerstedt}},
@@ -375,9 +351,6 @@
   title={LQR-trees: Feedback motion planning via sums-of-squares verification},
   author={R. Tedrake and I. R. Manchester and M. Tobenkin and J.W. Roberts},
   journal={Int. J. Robot. Res},
-  volume={29},
-  number={8},
-  pages={1038--1052},
   year={2010}
 }
 
@@ -408,7 +381,7 @@
 
 @article{wongpiromsarn2012receding,
   title={Receding horizon temporal logic planning},
-  author={T. Wongpiromsarn and U. Topcu and R.M. Murray},
+  author={T. Wongpiromsarn and U. Topcu and R. M. Murray},
   journal={IEEE TAC},
   volume={57},
   number={11},
@@ -455,13 +428,10 @@
 	author={M. {Srinivasan} and S. {Coogan} and M. {Egerstedt}},
 	booktitle={CDC}, 
 	title={Control of Multi-Agent Systems with Finite Time Control Barrier Certificates and Temporal Logic}, 
-	year={2018},
-	volume={},
-	number={},
-	pages={1991-1996}}
+	year={2018}}
 
 @INPROCEEDINGS{Murray95differentialflatness,
-	author = {R.M. Murray and M. Rathinam and W. Sluis},
+	author = {R. M. Murray and M. Rathinam and W. Sluis},
 	title = {Differential Flatness of Mechanical Control Systems: A Catalog of Prototype Systems},
 	booktitle = {Proceedings of the 1995 ASME International Congress and Exposition},
 	year = {1995}
