--- a/camera_ready/related_work.tex
+++ b/camera_ready/related_work.tex
@@ -15,10 +15,10 @@ Existing methods can be categorized based on the dynamics that they can handle (
 whether the system is subject to disturbances, considered class of specifications, and scalability. 
 A common approach to solve for reach-avoid specifications is to perform the high-level planning over a lower dimensional dynamical model and then use
 Sum-of-Squares (SOS) programming or Hamilton Jacobi (HJ) or satisfiabiity modulo convex programming (SMC) methods to obtain a low-level controller ensuring a bounded error between the 
-two models \cite{herbert2017fastrack,DBLP:journals/corr/abs-1911-09773,singh2018robust,Nilsson:2018}. 
+two models \cite{herbert2017fastrack,meyer2019,singh2018robust,Nilsson:2018}. 
 %\KM{Nothing has been stated about \cite{DBLP:journals/corr/abs-1911-09773,sun2019}.} 
 In contrast to \cite{herbert2017fastrack,singh2018robust}, our method does not require finding 
-a linear mapping between the low and high dimensional models. Meyer et al. considered reach-avoid problems for perturbed non-linear control affine systems \cite{DBLP:journals/corr/abs-1911-09773}. At first, they create a low-order system and use SOS programming to compute a controller ensuring a bounded error between the two systems. In the second step, they use abstraction-based controller design to compute a controller for the low-order system while taking the error into account. While their method can provide guarantee against worst-case disturbances, it is not clear if SOS programming always scales to the higher dimensions. 
+a linear mapping between the low and high dimensional models. Meyer et al. considered reach-avoid problems for perturbed non-linear control affine systems \cite{meyer2019}. At first, they create a low-order system and use SOS programming to compute a controller ensuring a bounded error between the two systems. In the second step, they use abstraction-based controller design to compute a controller for the low-order system while taking the error into account. While their method can provide guarantee against worst-case disturbances, it is not clear if SOS programming always scales to the higher dimensions. 
 Nilsson et al.  proposed a method that decomposes the state space into a lower-order planning space, and a higher-order internal dynamics space, so that planning can be performed fast and accurate tracking can be achieved using a set of control barrier functions that are computed using SOS programming method \cite{Nilsson:2018}. Despite providing guarantees for the worst-case bounded disturbances, their method is not capable of solving reach-avoid tasks which involve dynamic obstacles as in the multi-agent case.
 %that governs the motion in planning space. 
 %The planning is performed fast since it is restricted to the lower-order space. To guarantee following of the planned trajectory in the lower-order space, control barrier functions are computed using SOS method. This method, however, cannot deal with dynamic obstacles as is needed in tackling collision avoidance.}
