--- a/camera_ready/abstract.tex
+++ b/camera_ready/abstract.tex
@@ -1,11 +1,11 @@
 % !TEX root = main.tex
 
 We consider the decentralized controller synthesis problem for multi-agent systems with global reach-avoid specifications.
-Each agent is modeled as a nonlinear dynamical system with disturbance. The objective is to synthesize \emph{local} feedback controllers that guarantee that the overall multi-agent system meets the global specification under the influence of disturbances.
+Each agent is modeled as a nonlinear dynamical system with disturbances. The objective is to synthesize \emph{local} feedback controllers which guarantee that the overall multi-agent system meets the global specification under the influence of disturbances.
 %
-Existing techniques based on planning or trajectory optimization usually ignore the effects of disturbance and produce open-loop
+On the one hand, existing techniques based on planning or trajectory optimization usually ignore the effects of disturbances and produce open-loop
 \emph{nominal} trajectories which may not suffice in the presence of disturbances.
-Techniques based on formal synthesis that guarantee satisfaction of temporal specifications do not scale as the number of agents increase.
+On the other hand, techniques based on formal synthesis which guarantee satisfaction of temporal specifications do not scale as the number of agents increase.
 
 We address these limitations by proposing a two-level solution approach that combines fast global nominal trajectory generation and local application of formal synthesis.
 At the top level, we ignore the effect of disturbances and obtain a joint open-loop plan for the system using a fast trajectory optimizer.
